Se estandariza encabezado

--- a/course-html/scen-html-link/assets/step2.html
+++ b/course-html/scen-html-link/assets/step2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Vinculación a toros sitios</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>Críticas de cine
