--- a/course-html/scen-html-link/assets/step3.html
+++ b/course-html/scen-html-link/assets/step3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Vinculación a otras páginas en el mismo sitio</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>
