--- a/course-html/scen-html-link/assets/step4.html
+++ b/course-html/scen-html-link/assets/step4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Enlaces de correo electrónico</title>
+        <title>Práctica</title>
     </head>
     <body>
         <a href="mailto:oscar@gmail.com">Correo Gmail de Oscar</a>
