--- a/course-html/scen-html-link/assets/step5.html
+++ b/course-html/scen-html-link/assets/step5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Abrir enlaces en una nueva ventana</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>
