--- a/course-html/scen-html-link/assets/step6.html
+++ b/course-html/scen-html-link/assets/step6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Vinculación a una parte específica de una página</title>
+        <title>Práctica</title>
     </head>
     <body>
         <h1 id="top">Términos de realización de películas</h1>
