--- a/course-html/scen-html-list/assets/step1.html
+++ b/course-html/scen-html-list/assets/step1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Listas ordenadas</title>
+        <title>Práctica</title>
     </head>
     <body>
         <ol>
