--- a/course-html/scen-html-list/assets/step3.html
+++ b/course-html/scen-html-list/assets/step3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lista de definiciones</title>
+        <title>Práctica</title>
     </head>
     <body>
         <dl>
