--- a/course-html/scen-html-list/assets/step5.html
+++ b/course-html/scen-html-list/assets/step5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Listas</title>
+        <title>Práctica</title>
     </head>
     <body>
         <h1>Huevos revueltos</h1>
