--- a/course-html/scen-html-text/assets/step1.html
+++ b/course-html/scen-html-text/assets/step1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Títulos</title>
+        <title>Práctica</title>
     </head>
     <body>
         <h1>Este es un título principal</h1>
