--- a/course-html/scen-html-text/assets/step11.html
+++ b/course-html/scen-html-text/assets/step11.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Citas</title>
+        <title>Práctica</title>
     </head>
     <body>
         <blockquote cite="http://en.wikipedia.org/wiki/Winnie-the-Pooh">
