--- a/course-html/scen-html-text/assets/step14.html
+++ b/course-html/scen-html-text/assets/step14.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Definiciones</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>Un  <dfn>Agujero negro</dfn> es una región del espacio de la que nada, ni siquiera la luz, puede escapar.</p>
