--- a/course-html/scen-html-text/assets/step15.html
+++ b/course-html/scen-html-text/assets/step15.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Direcciones</title>
+        <title>Práctica</title>
     </head>
     <body>
         <address>
