--- a/course-html/scen-html-text/assets/step16.html
+++ b/course-html/scen-html-text/assets/step16.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Insertar y Eliminar</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>Era el <del>peor</del> <ins>mejor</ins> idea que ella había tenido alguna vez.</p>
