--- a/course-html/scen-html-text/assets/step17.html
+++ b/course-html/scen-html-text/assets/step17.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tachado</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>Computadora portátil:</p>
