--- a/course-html/scen-html-text/assets/step2.html
+++ b/course-html/scen-html-text/assets/step2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Párrafos</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>Un párrafo consta de una o más oraciones que forman una unidad de discurso autónoma. El inicio de un párrafo se indica mediante una nueva línea.</p>
