--- a/course-html/scen-html-text/assets/step4.html
+++ b/course-html/scen-html-text/assets/step4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Cursiva</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>Así es como hacemos que una palabra aparezca en <i>cursiva</i>.</p>
