--- a/course-html/scen-html-text/assets/step5.html
+++ b/course-html/scen-html-text/assets/step5.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Superíndice y subíndice</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>El 4<sup>th</sup> de septiembre se podrá aprender acerca de E=MC<sup>2</sup>.</p>
