--- a/course-html/scen-html-text/assets/step6.html
+++ b/course-html/scen-html-text/assets/step6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Espacio en blanco</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>La luna se aleja de la Tierra.</p>
