--- a/course-html/scen-html-text/assets/step8.html
+++ b/course-html/scen-html-text/assets/step8.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Reglas horizontales</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>Venus es el único planeta que gira en sentido horario.</p>
