--- a/course-html/scen-html-text/assets/step9.html
+++ b/course-html/scen-html-text/assets/step9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Grosor</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p><strong>Cuidado:</strong> los carteristas operan en esta área.</p>
