--- a/course-html/scen-html-link/assets/step1.html
+++ b/course-html/scen-html-link/assets/step1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Escribir enlaces</title>
+        <title>Práctica</title>
     </head>
     <body>
         <a href="https://es.wikipedia.org/">Wikipedia</a>
