--- a/course-html/scen-html-link/assets/step7.html
+++ b/course-html/scen-html-link/assets/step7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Enlaces</title>
+        <title>Práctica</title>
     </head>
     <body>
         <h1 id="top">Folk de cine</h1>
