--- a/course-html/scen-html-structure/assets/step1.html
+++ b/course-html/scen-html-structure/assets/step1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ejemplo de estructura</title>
+        <title>Práctica</title>
     </head>
     <body>
         <h1>Este es el encabezado principal</h1>
