--- a/course-html/scen-html-structure/assets/step2.html
+++ b/course-html/scen-html-structure/assets/step2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Este es el titulo de la página</title>
+    <title>Práctica</title>
 </head>
 <body>
     <h1>Este es el cuerpo de la página</h1>
