--- a/course-html/scen-html-text/assets/step10.html
+++ b/course-html/scen-html-text/assets/step10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Énfasis</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p><em>Creo</em> que Ivy fue la primera.</p>
