--- a/course-html/scen-html-text/assets/step12.html
+++ b/course-html/scen-html-text/assets/step12.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Abreviaciones y Acronimos</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p><abbr title="Professor">El profesor</abbr> Stephen Hawking es un físico teórico y cosmólogo.</p>
