--- a/course-html/scen-html-text/assets/step13.html
+++ b/course-html/scen-html-text/assets/step13.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Citas</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p><cite>Una breve historia del tiempo</cite> de Stephen Hawking ha vendido más de diez millones de copias en todo el mundo.</p>
