--- a/course-html/scen-html-text/assets/step18.html
+++ b/course-html/scen-html-text/assets/step18.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Texto</title>
+        <title>Práctica</title>
     </head>
     <body>
         <h1>La historia en el libro</h1>
