--- a/course-html/scen-html-text/assets/step7.html
+++ b/course-html/scen-html-text/assets/step7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Salto de línea</title>
+        <title>Práctica</title>
     </head>
     <body>
         <p>La Tierra se<br />vuelve cien toneladas más pesada cada día<br />debido a la caída del polvo espacial.</p>
